# chat-clien-server

./: CMakeLists.txt
client/: Makefile  client.cpp  client.h  main_client.cpp
docs/: install.md  project.md
include/custom_code/: custom_macros.h
include/logging/: logging.cpp  logging.h  string_logger.cpp
include/logging/logs/: logs.txt
include/socket/: TCPSocket.cpp  TCPSocket.h  constants.h  socket.cpp  socket.h
logging/: logging.cpp  logging.h
logging/logs/: logs.txt
logs/: logs.txt
server/: Makefile  main_server.cpp  server.cpp  server.h
src/base/constants/: message_code.cpp
src/client/: client.cpp  client.h  main_client.cpp  ui_console.cpp  ui_console.h
src/server/: main_server.cpp  server.cpp  server.h
tests/: test1.cpp
